--- a/npcs/Crusible_Firepeak.yaml
+++ b/npcs/Crusible_Firepeak.yaml
@@ -216,7 +216,6 @@ npc:
     #
     occupation:
     - Smith
-    
 
     #
     # D & D classes (case insensitive):
@@ -298,7 +297,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -314,7 +312,6 @@ npc:
     - Common
     - Dwarf
     - Goblin
-
 
     #
     # Factions:
@@ -337,7 +334,6 @@ npc:
     - id: The_Dead_Hunters
       name: The Dead Hunters
       role: Blacksmith/Weaponsmith/Armorer
-
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -373,7 +369,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:    7'5" and rippling with muscles. Ursine features with short cropped hair full of singed patches and a leather apron 
+    appearance:  7'5" and rippling with muscles. Ursine features with short cropped hair full of singed patches and a leather apron 
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -389,7 +385,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Yor new weapon's bout ready, Phantom", "hmph", "leave m'alone, got work ta do"
+    expressions:  
+    - "Yor new weapon's bout ready, Phantom"
+    - "hmph"
+    - "leave m'alone, got work ta do"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -413,7 +412,7 @@ npc:
     #
     motivations: |
       ridding the world of fiends, undead and abominations. redemption 
-      
+
     #
     # Passions:
     #
@@ -431,7 +430,7 @@ npc:
     #
     vulnerabilities: |
       Not the brightest, quick to anger
-      
+
     #
     # Secrets:
     #
@@ -440,7 +439,7 @@ npc:
     #
     secrets: |
       Did many terrible things with his clan 
-      
+  
   #
   # The D & D stats block:
   # All integers.
@@ -452,7 +451,7 @@ npc:
     str: 26
     dex: 18
     con: 21
-    int: 11 
+    int: 11
     wis: 20
     cha: 10
 
@@ -465,60 +464,60 @@ npc:
   #
   specialties:
     skills:
-  - - Bugbear Traits:
-       - Darkvision: Can see 300 feet in dim light as though it was bright light and in darkness as if it was dim light
-       - Long Limbed: when making a melee attack his reach is extended by 5 extra feet
-       - Powerfuk Build: Counts as one size larger for carrying capacity and amount he can lift, push or drag
-       - Sneaky: Proficient in Stealth
-       - Surprise Attack: If he surprises a creature and hit ti on the first turn of combat, he may add 2d6 to the damage
-    
-   - - Cleric Abilities:
-       - Spellcasting: DC19
-         Cantrips: Guidance, Thaumaturgy, Resistance, Sacred Flame, Mending
-         1st Level: Detect Magic, Bane, Bless, Cure Wounds
-         2nd Level: Hold Person, Spiritual Weapon, Continual Flame
-         3rd Level: Dispel Magic, Create Food and Water, Spirit Guardians
-         4th Level: Banishment, Control Water, Stone Shape
-         5th Level: Flame Strike, Greater Restoration, 
-         6th Level: Blade Barrier 
-         7th Level: Fire Storm 
-         8th Level: Earthquake
-         9th Level: Mass Heal
-       - Channel Divinity: Turn Undead, Destroy Undead, Artisan's Blessing 
-       - Divine Intervention: Can call her patron to intervene on her behalf
-
-   - - Forge Domain Abilities:
-       - Spellcasting: DC
-         1st Level: Identify, Searing Smite
-         3rd Level: Heat Metal, Magic Weapon
-         5th Level: Elemental Weapon, Protection from Energy
-         7th Level: Fabricate, Wall of Fire
-         9th Level: Animate Object, Creation
-       - Bonus Proficiencies: Proficiency with Heavy Armor and Smith's Tools
-       - Blessing of the Forge: you gain the ability to imbue magic into a weapon or armor. At the end of a long rest, you can touch one nonmagical object that is a suit of armor or a simple or martial weapon. Until the end of 
+    - Bugbear Traits:
+      - Darkvision: Can see 300 feet in dim light as though it was bright light and in darkness as if it was dim light
+        Long Limbed: when making a melee attack his reach is extended by 5 extra feet
+        Powerfuk Build: Counts as one size larger for carrying capacity and amount he can lift, push or drag
+        Sneaky: Proficient in Stealth
+        Surprise Attack: If he surprises a creature and hit ti on the first turn of combat, he may add 2d6 to the damage
+      Cleric Abilities:
+      - Spellcasting:
+        - Description: DC 19
+          Cantrips: Guidance, Thaumaturgy, Resistance, Sacred Flame, Mending
+          1st Level: Detect Magic, Bane, Bless, Cure Wounds
+          2nd Level: Hold Person, Spiritual Weapon, Continual Flame
+          3rd Level: Dispel Magic, Create Food and Water, Spirit Guardians
+          4th Level: Banishment, Control Water, Stone Shape
+          5th Level: Flame Strike, Greater Restoration, 
+          6th Level: Blade Barrier 
+          7th Level: Fire Storm 
+          8th Level: Earthquake
+          9th Level: Mass Heal
+        Channel Divinity: Turn Undead, Destroy Undead, Artisan's Blessing 
+        Divine Intervention: Can call her patron to intervene on her behalf
+      Forge Domain Abilities:
+      - Spellcasting:
+        - Description: DC 19
+          1st Level: Identify, Searing Smite
+          3rd Level: Heat Metal, Magic Weapon
+          5th Level: Elemental Weapon, Protection from Energy
+          7th Level: Fabricate, Wall of Fire
+          9th Level: Animate Object, Creation
+        Bonus Proficiencies: Proficiency with Heavy Armor and Smith's Tools
+        Blessing of the Forge: you gain the ability to imbue magic into a weapon or armor. At the end of a long rest, you can touch one nonmagical object that is a suit of armor or a simple or martial weapon. Until the end of
                                 your next long rest or until you die, the object becomes a magic item, granting a +1 bonus to AC if it’s armor or a +1 bonus to attack and damage rolls if it’s a weapon. Once you use this feature,
                                 you can’t use it again until you finish a long rest.
-       - Channel Divinity - Artisans Blessing: you can use your Channel Divinity to create simple items. You conduct an hour-long ritual that crafts a nonmagical item that must include some metal; a simple or martial weapon, a 
-                                               suit of armor, ten pieces of ammunition, a set of tools, or another metal object. The creation is completed at the end of the hour, coalescing in an unoccupied space of your choice 
-                                               on a surface within 5 feet of you. The thing you create can be something that is worth no more than 100 gp. As part of this ritual, you must lay out metal, which can include coins, 
-                                               with a value equal to the creation. The metal irretrievably coalesces and transforms into the creation at the ritual’s end, magically forming even nonmetal parts of the creation. 
-                                               The ritual can create a duplicate of a nonmagical item that contains metal, such as a key, if you possess the original during the ritual.
-       - Soul of the Forge: your mastery of the forge grants you special abilities; You gain resistance to fire damage. While wearing heavy armor, you gain a +1 bonus to AC
-       - Divine Strike: you gain the ability to infuse your weapon strikes with the fiery power of the forge. Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an extra 1d8
-                        fire damage to the target. When you reach 14th level, the extra damage increases to 2d8.
-       - Saint of Forge and Fire: your blessed affinity with fire and metal becomes more powerful; You gain immunity to fire damage. While wearing heavy armor, you have resistance to bludgeoning, piercing, and slashing damage 
-                                  from nonmagical attacks.       
+        Channel Divinity - Artisans Blessing: you can use your Channel Divinity to create simple items. You conduct an hour-long ritual that crafts a nonmagical item that must include some metal; a simple or martial weapon, a 
+                                              suit of armor, ten pieces of ammunition, a set of tools, or another metal object. The creation is completed at the end of the hour, coalescing in an unoccupied space of your choice
+                                              on a surface within 5 feet of you. The thing you create can be something that is worth no more than 100 gp. As part of this ritual, you must lay out metal, which can include coins,
+                                              with a value equal to the creation. The metal irretrievably coalesces and transforms into the creation at the ritual’s end, magically forming even nonmetal parts of the creation. 
+                                              The ritual can create a duplicate of a nonmagical item that contains metal, such as a key, if you possess the original during the ritual.
+        Soul of the Forge: your mastery of the forge grants you special abilities; You gain resistance to fire damage. While wearing heavy armor, you gain a +1 bonus to AC
+        Divine Strike: you gain the ability to infuse your weapon strikes with the fiery power of the forge. Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an extra 1d8
+                       fire damage to the target. When you reach 14th level, the extra damage increases to 2d8.
+        Saint of Forge and Fire: your blessed affinity with fire and metal becomes more powerful; You gain immunity to fire damage. While wearing heavy armor, you have resistance to bludgeoning, piercing, and slashing damage
+                                 from nonmagical attacks.
 
     special-abilities:
-    - Proficiencies: Smith's Tools, Heavy Armor, Shields, Athletics, Perception, Intimidation, Stealth, Religion    
-    - Feats: Crusher, Durable, Grappler, Great Weapon Master, Mobile, Savage Attacker, Sentinel, War Caster 
-    - Legendary Resistance: (3/Day), If Crusible Firepeak fails a saving throw he can choose to succeed instead 
-    - Legendary Actions: Crusible Firepeak can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
+    - Proficiencies: Smith's Tools, Heavy Armor, Shields, Athletics, Perception, Intimidation, Stealth, Religion
+      Feats: Crusher, Durable, Grappler, Great Weapon Master, Mobile, Savage Attacker, Sentinel, War Caster
+      Legendary Resistance: (3/Day), If Crusible Firepeak fails a saving throw he can choose to succeed instead
+      Legendary Actions: Crusible Firepeak can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn.
                          Crusible Firepeak regains spent Legendary Actions at the start of his turn
-      - Forge Bane: Crusible Firepeak can cause one magical metal item within 30 feet to become nonmagical until the end of his next turn
-      - Forge Restoration: Crusible Firepeak can gain HP equal to the total amount of fire damage done in combat this round
-      - Fires Rage: Crusible Firepeak can cast Fire Storm without using a Spell Slot 
-    
+      Forge Bane: Crusible Firepeak can cause one magical metal item within 30 feet to become nonmagical until the end of his next turn
+      Forge Restoration: Crusible Firepeak can gain HP equal to the total amount of fire damage done in combat this round
+      Fires Rage: Crusible Firepeak can cast Fire Storm without using a Spell Slot
+
     attacks: |
       has 2 attacks
     combat-tactics: |
@@ -529,7 +528,6 @@ npc:
     - Forge Ringer Great WarHammer
     - Smith's Tools
 
-    
   profile:
 
     #
@@ -546,7 +544,7 @@ npc:
       But the fire refused to take Torog. Surrounded by flames, a higher purpose was revealed to Torog by the Gods of the Forge, and Crusible Firepeak was born. Surviving the flames Crucible fled from the demon, and found a 
       forge where he could learn the trade to honour his saviours and embark on his new path. Swearing revenge against all those that inhabit the Abyss, he pursued his new calling with furvor, until he caught the eye of The 
       Phantom and became the smith and weaponer for the Dead Hunters 
-      
+
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -559,32 +557,4 @@ npc:
       Crusible Firepeak is a massive specimen. What little hair he has is short cropped and shaved close, a very odd choice for a bugbear, but mostly due to his baptism in fire. What's left of the hair on his ursine face, is 
       patchy and singed. He wears full plate armor underneath the long leather apron covered in grease and scorth marks. Crusible isn't the brightest of fellows, but has become quite adept at his chosen calling of the forge. 
       What he lacks in intelligence he makes up for in passion, industry and devotion to the Gods that saved him. He's not very personable, but he has proven himself to The Phantom as a stalwart ally.
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+  
