--- a/npcs/Dakeelek.yaml
+++ b/npcs/Dakeelek.yaml
@@ -298,7 +298,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -313,7 +312,6 @@ npc:
     languages:
     - Common
     - Auran
-
 
     #
     # Factions:
@@ -333,7 +331,6 @@ npc:
     # Optional.  0 or more.
     #
     factions:
-
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -383,7 +380,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "You Like buy?" "What me get for you" "I show you how"
+    expressions:  
+    - "You Like buy?"
+    - "What me get for you?"
+    - "I show you how"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -432,9 +432,9 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    secrets: How to make potions of various kinds
-       
-      
+    secrets: |
+      How to make potions of various kinds
+
   #
   # The D & D stats block:
   # All integers.
@@ -446,7 +446,7 @@ npc:
     str: 9
     dex: 13
     con: 11
-    int: 17 
+    int: 17
     wis: 19
     cha: 14
 
@@ -459,27 +459,25 @@ npc:
   #
   specialties:
     skills:
-   - - Aarakocra Traits:
+    - Aarakocra Traits:
       - Flight: Flying speed is 50 feet
-      - Talons: Proficiency in Unarmed Strikes, doing 1d4 slashing damage
- 
-   - - Druid Abilities:
-       - Druidic: You know Druidic, the Secret language of druids. You can speak the language and use it to leave hidden messages. You and others who know this language automatically spot such a Message. Others spot the 
-                  message's presence with a successful DC 15 Wisdom (Perception) check but can't decipher it without magic.  
-       - Spellcasting: DC
-         Cantrips: Guidance, Resistance 
-         1st Level: Cure Wound, Goodberry, Healing Word, Purify Food and Water
-         2nd Level: Heat Metal, Lesser Restoration
-       - Wild Shape: you can use your action to magically assume the shape of a beast that you have seen before. You can use this feature twice. You regain expended uses when you finish a short or Long Rest. Your druid level 
-                     determines the Beasts you can transform into, as shown in the Beast Shapes table. At 2nd Level, for example, you can transform into any beast that has a Challenge Rating of 1/4 or lower that doesn't have
-                     flying or Swimming speed. You can stay in a beast shape for a number of hours equal to half your druid level (rounded down). You then revert to your normal form unless you expend another use of this feature. 
-                     You can revert to your normal form earlier by using a Bonus Action on Your Turn. You automatically revert if you fall Unconscious, drop to 0 Hit Points, or die 
-
-   - - Circle of Dreams Abilities:
-       - Balm of the Summer Court: you become imbued with the blessings of the Summer Court. You are a font of energy that offers respite from injuries. You have a pool of fey energy represented by a number of d6s equal to your
-                                   druid level. As a bonus action, you can choose an ally you can see within 120 feet of you and spend a number of those dice equal to half your druid level or less. Roll the spent dice and add them 
-                                   together. The target regains a number of hit points equal to the total. The target also gains 1 temporary hit point per die spent      
-       
+        Talons: Proficiency in Unarmed Strikes, doing 1d4 slashing damage
+      Druid Abilities:
+      - Druidic: You know Druidic, the Secret language of druids. You can speak the language and use it to leave hidden messages. You and others who know this language automatically spot such a Message. Others spot the 
+                 message's presence with a successful DC 15 Wisdom (Perception) check but can't decipher it without magic.
+        Spellcasting: 
+        - Description: DC
+          Cantrips: Guidance, Resistance 
+          1st Level: Cure Wound, Goodberry, Healing Word, Purify Food and Water
+          2nd Level: Heat Metal, Lesser Restoration
+        Wild Shape: you can use your action to magically assume the shape of a beast that you have seen before. You can use this feature twice. You regain expended uses when you finish a short or Long Rest. Your druid level 
+                    determines the Beasts you can transform into, as shown in the Beast Shapes table. At 2nd Level, for example, you can transform into any beast that has a Challenge Rating of 1/4 or lower that doesn't have
+                    flying or Swimming speed. You can stay in a beast shape for a number of hours equal to half your druid level (rounded down). You then revert to your normal form unless you expend another use of this feature. 
+                    You can revert to your normal form earlier by using a Bonus Action on Your Turn. You automatically revert if you fall Unconscious, drop to 0 Hit Points, or die 
+      Circle of Dreams Abilities:
+      - Balm of the Summer Court: you become imbued with the blessings of the Summer Court. You are a font of energy that offers respite from injuries. You have a pool of fey energy represented by a number of d6s equal to your
+                                  druid level. As a bonus action, you can choose an ally you can see within 120 feet of you and spend a number of those dice equal to half your druid level or less. Roll the spent dice and add them 
+                                  together. The target regains a number of hit points equal to the total. The target also gains 1 temporary hit point per die spent
 
     special-abilities:
     - Proficiencies: Herbalsim, Nature, Medicine    
@@ -489,7 +487,7 @@ npc:
       N/A
     special-equipment:
     - Various potions and herbal remedies
-                                                                   
+
   profile:
 
     #
@@ -503,7 +501,6 @@ npc:
       She was exiled from her people because of her connection to other animals and creatures of the material realms. She studied under several Elvin Druids and eventually became a merchant because of her desire to help others 
       and spread her knowledge.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -514,32 +511,4 @@ npc:
     #
     personality: |
       Tall and Thin with ruffled brown and gray feathers
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+  
