--- a/npcs/Delores_Dumas.yaml
+++ b/npcs/Delores_Dumas.yaml
@@ -299,7 +299,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -339,7 +338,6 @@ npc:
       name: Dumas Family
       role: Offering
 
-
     #
     # Adjectives or other tags that can be used for searching.
     #
@@ -363,7 +361,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction: A scrawny, wild-eyed, messy-haired woman scrambles out of the bushes "Helpmehelpmehelpmehelp!! Too late they're coming!" 
+    introduction: A scrawny, wild-eyed, messy-haired woman scrambles out of the bushes /"Helpmehelpmehelpmehelp!! Too late they're coming!/" 
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -390,7 +388,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Help", "They're coming", "Nonononononononono!!!!"
+    expressions:  
+    - "Help"
+    - "They're coming"
+    - "Nonononononononono!!!!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -414,7 +415,7 @@ npc:
     #
     motivations: |
       Who knows
-      
+
     #
     # Passions:
     #
@@ -423,7 +424,7 @@ npc:
     #
     passions: |
       Escape
-      
+
     #
     # Vulnerabilities:
     #
@@ -432,7 +433,7 @@ npc:
     #
     vulnerabilities: |
       She is inflicted with Indefinite Madness. Her madness is not curable by any means
-      
+
     #
     # Secrets:
     #
@@ -441,7 +442,7 @@ npc:
     #
     secrets: |
       She is the daughter of Anastasia Dumas. Her husband was murdered by her son and she was forced to bear a daughter with a Greater Devil. None of her spells can effect any of her blood relatives.
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -466,39 +467,40 @@ npc:
   #
   specialties:
     skills:
-   - - Cleric Abilities:
-      - Spellcasting: 
-         Cantrips: Thaumaturgy, Primal Savagery, Prestidigitation, Mind Sliver, Toll of the Dead
-         1st Level: Arms of Hadar, Bane, Faerie Fire, Sleep, Id Insinuation
-         2nd Level: Augury, Tasha's Mind Whip, Mind Spike
-         3rd Level: Counterspell, Hunger of Hadar, Psionic Blast
-         4th Level: Compulsion, Confusion, Divination
-         5th Level: Scrying, Synaptic Static, Temporal Shunt
-         6th Level: Psychic Crush, Otto's Irresistible Dance
-         7th Level: Forcecage, Create Undead
-         8th Level: Reality Break
-         9th Level: Psychic Scream
-      - Channel Divinity: Turn Undead, Destroy Undead 
-      - Divine Intervention: Can call her patron to intervene on her behalf
+    - Cleric Abilities:
+      - Spellcasting:
+        - Description: DC 19
+          Cantrips: Thaumaturgy, Primal Savagery, Prestidigitation, Mind Sliver, Toll of the Dead
+          1st Level: Arms of Hadar, Bane, Faerie Fire, Sleep, Id Insinuation
+          2nd Level: Augury, Tasha's Mind Whip, Mind Spike
+          3rd Level: Counterspell, Hunger of Hadar, Psionic Blast
+          4th Level: Compulsion, Confusion, Divination
+          5th Level: Scrying, Synaptic Static, Temporal Shunt
+          6th Level: Psychic Crush, Otto's Irresistible Dance
+          7th Level: Forcecage, Create Undead
+          8th Level: Reality Break
+          9th Level: Psychic Scream
+        Channel Divinity: Turn Undead, Destroy Undead 
+        Divine Intervention: Can call her patron to intervene on her behalf
 
-   - - Madness Domain Abilities: 
-       - Divine Hallucinations: you can use an action to enter a catatonic trance to receive warnings from your god via hallucination. You become incapacitated for 1 minute as you experience a vivid hallucination that might be 
-                                prophetic. The DM rolls a d6 in secret. On a roll of a 5 or 6, the DM shows you a likely future involving a real threat you're likely to face soon. On any other roll the DM shows you a paranoid 
-                                vision of an unlikely future involving threats that are not real or that you're unlikely to face, such as a betrayal from allies that are actually trustworthy, or an attack from monsters that 
-                                aren't actually present in the immediate area. You can enter this trance a number of times equal to your cleric level divided by 4 (a minimum of once). 
-       - Gift of Madness: level you also learn how to ward off attackers by sharing your madness with them. Immediately after a creature hits you with a melee attack, you can use your reaction to assault it with hallucinations. 
-                          The creature must make a Wisdom saving throw. On a failed saving throw, it takes psychic damage equal to 2 + half your cleric level and the hallucinations make it either blinded or deafened (your choice)
-                          and frightened of you until the end of your next turn. You can use this reaction ability a number of times equal to your Wisdom modifier (a minimum of once).
-       - Dread Whispers: you can use your Channel Divinity to infuse the creatures in an area with paranoid dread and maddening whispers warning them of betrayal As an action, you choose a point that you can see within 60 feet. 
-                         Each creature in a 10 foot sphere centered on that point must make a Wisdom saving throw. On a failed saving throw, a creature takes psychic damage equal to ld6 + half your cleric level and it becomes 
-                         addled with dread for 1 minute. A creature addled with this dread treats all other creatures as enemies for the purpose of disadvantage for ranged attacks, and must make any opportunity attack it 
-                         possibly can. At the end of an affected creature's turn, it repeats the saving throw. A success ends the effect on that creature.
-       - Crazed Stumbling: when you deal psychic damage to a creature you can cause it to stagger with fear and confusion. You can choose to push it up to 10 feet in any direction that it can move, but you cannot move it further
-                           than half its speed
-       - Potent Spellcasting: you add your Wisdom modifier to the damage you deal with any cleric cantrip.
-       - Already Mad: you cannot be charmed or frightened and you have immunity to psychic damage.
-       - Spellcasting:
-          Cantrips: Vicious Mockery
+      Madness Domain Abilities:
+      - Divine Hallucinations: you can use an action to enter a catatonic trance to receive warnings from your god via hallucination. You become incapacitated for 1 minute as you experience a vivid hallucination that might be
+                               prophetic. The DM rolls a d6 in secret. On a roll of a 5 or 6, the DM shows you a likely future involving a real threat you're likely to face soon. On any other roll the DM shows you a paranoid
+                               vision of an unlikely future involving threats that are not real or that you're unlikely to face, such as a betrayal from allies that are actually trustworthy, or an attack from monsters that
+                               aren't actually present in the immediate area. You can enter this trance a number of times equal to your cleric level divided by 4 (a minimum of once).
+        Gift of Madness: level you also learn how to ward off attackers by sharing your madness with them. Immediately after a creature hits you with a melee attack, you can use your reaction to assault it with hallucinations.
+                         The creature must make a Wisdom saving throw. On a failed saving throw, it takes psychic damage equal to 2 + half your cleric level and the hallucinations make it either blinded or deafened (your choice)
+                         and frightened of you until the end of your next turn. You can use this reaction ability a number of times equal to your Wisdom modifier (a minimum of once).
+        Dread Whispers: you can use your Channel Divinity to infuse the creatures in an area with paranoid dread and maddening whispers warning them of betrayal As an action, you choose a point that you can see within 60 feet.
+                        Each creature in a 10 foot sphere centered on that point must make a Wisdom saving throw. On a failed saving throw, a creature takes psychic damage equal to ld6 + half your cleric level and it becomes
+                        addled with dread for 1 minute. A creature addled with this dread treats all other creatures as enemies for the purpose of disadvantage for ranged attacks, and must make any opportunity attack it
+                        possibly can. At the end of an affected creature's turn, it repeats the saving throw. A success ends the effect on that creature.
+        Crazed Stumbling: when you deal psychic damage to a creature you can cause it to stagger with fear and confusion. You can choose to push it up to 10 feet in any direction that it can move, but you cannot move it further
+                          than half its speed
+        Potent Spellcasting: you add your Wisdom modifier to the damage you deal with any cleric cantrip.
+        Already Mad: you cannot be charmed or frightened and you have immunity to psychic damage.
+        Spellcasting:
+        - Cantrips: Vicious Mockery
           1st Level: Dissonant Whispers, Tasha's Hideous Laughter
           3rd Level: Crown of Madness, Phantasmal Force
           5th Level: Fear, Incite Self-Harm
@@ -507,12 +509,13 @@ npc:
 
     special-abilities: 
     - Feats: Indefinite Madness, Contortionist, Eldritch Adept, 
-    - Legendary Resistance: (3/Day), If Delores Dumas fails a saving throw she can choose to succeed instead. Delores is completely immune to Psychic Damage and Charms 
-    - Legendary Actions: Delores Dumas can take 3 Legendary Actions. Randomly choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Delores Dumas 
-                   regains spent Legendary Actions at the start of her turn
-      - Devils Portal: Delores Dumas can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
-      - Touch of Madness: Delores Dumas touch one person within range and the must make a wisdom savign throw equal to her spellcasting DC or roles two results on the Short-Term Madness Table lasting until the end of their next turn
-      - Devils Children: Delores Dumas can cast Gate, opening a portal to summon up to 5 lesser devils
+      Legendary Resistance: (3/Day), If Delores Dumas fails a saving throw she can choose to succeed instead. Delores is completely immune to Psychic Damage and Charms 
+      Legendary Actions: 
+      - Description: Delores Dumas can take 3 Legendary Actions. Randomly choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Delores Dumas 
+                     regains spent Legendary Actions at the start of her turn
+        Devils Portal: Delores Dumas can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
+        Touch of Madness: Delores Dumas touch one person within range and the must make a wisdom savign throw equal to her spellcasting DC or roles two results on the Short-Term Madness Table lasting until the end of their next turn
+        Devils Children: Delores Dumas can cast Gate, opening a portal to summon up to 5 lesser devils
     attacks: |
       Various psychic spell attacks
     combat-tactics: |
@@ -530,17 +533,17 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Delores Dumas is the Daughter of Anastasia Dumas and mother of Nicodeamus and Irini Dumas. Delores grew up under her mother's cruel thumb and was prone to rebellion. At the age of 19 she met Saul Branstock and soon 
-      became pregnant, giving birth to her first child, Nicodeamus. Upon his birth, he was immediately taken from her by her grandmother and Saul helped her flee from her family. Her and Saul lived happily for many years 
-      though she always missed her son. One day a young familiar stranger arrived at their home. This stranger proceeded to put her in chains, gun down her husband and burn down their home. On their way back to the family 
-      home Delores was horrified to learn that this cold-hearted youth was in fact, Nicodeamus, all grown up. This event was the first large blow to her sanity. Her vicious son tortued and tormented her the entire way back 
-      to the ancestral family home. Once she was home, the family kept her locked and chained away in the basement shrine to their master. After several months chained in solitude, Anastasia offered up her daughter as tribute 
-      to the family patron. The devil took Delores to his realm and impregnanted her, shattering her mind completely and irrivocably. Upon her return, now thoroughly mad, Delores gave birth to a daughter, half human, half 
-      devil. Anastasia named her Irini and promised her to Nicodeamus. In her madness, the horrifying things she has experienced have also given her a kind of clarevoyance and has made her a prophet of sorts. She regularly 
-      has vision, omens and portents of things to come and events happening far away. Because of this, the family has kept her alive and prisoner in their sanctum. Delores frequently escapes from her prison, often at the at 
-      the expense of her own health, and often leads the rest of the family on a merry chace, but is always captured again and brought back to her prison. Anastasia also uses Delores' blood as a regular offering to the family 
+      Delores Dumas is the Daughter of Anastasia Dumas and mother of Nicodeamus and Irini Dumas. Delores grew up under her mother's cruel thumb and was prone to rebellion. At the age of 19 she met Saul Branstock and soon
+      became pregnant, giving birth to her first child, Nicodeamus. Upon his birth, he was immediately taken from her by her grandmother and Saul helped her flee from her family. Her and Saul lived happily for many years
+      though she always missed her son. One day a young familiar stranger arrived at their home. This stranger proceeded to put her in chains, gun down her husband and burn down their home. On their way back to the family
+      home Delores was horrified to learn that this cold-hearted youth was in fact, Nicodeamus, all grown up. This event was the first large blow to her sanity. Her vicious son tortued and tormented her the entire way back
+      to the ancestral family home. Once she was home, the family kept her locked and chained away in the basement shrine to their master. After several months chained in solitude, Anastasia offered up her daughter as tribute
+      to the family patron. The devil took Delores to his realm and impregnanted her, shattering her mind completely and irrivocably. Upon her return, now thoroughly mad, Delores gave birth to a daughter, half human, half
+      devil. Anastasia named her Irini and promised her to Nicodeamus. In her madness, the horrifying things she has experienced have also given her a kind of clarevoyance and has made her a prophet of sorts. She regularly
+      has vision, omens and portents of things to come and events happening far away. Because of this, the family has kept her alive and prisoner in their sanctum. Delores frequently escapes from her prison, often at the at
+      the expense of her own health, and often leads the rest of the family on a merry chace, but is always captured again and brought back to her prison. Anastasia also uses Delores' blood as a regular offering to the family
       patron, each time giving more of her soul to the master.
-      
+
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -550,38 +553,10 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Delores Dumas is always manic, disheveled and glassy-eye. Her red hair is always a mess and she is barely clothed, basically wearing a dirty gray long nightshirt. She always has her hands bound in manacles keep her from 
-     that double any kind of magical travel, but also double as her spellcasting focus allowing her to cast spells without any other spell components. Delores is quite mad and barely coherent. In her more lucid moments she 
-     tries to escape from her family, but is always brought back. At best, she speaks in riddles, at worst, in complete gibberish. Because of her broken mind, she cannot be charmed or contorlled in any way and is immune to 
-     psychic damage. Delores isn't particularly aggressive, more just frantic. She will not attack anyone or anything unless she is directly attacked herself, but due to her mania, she will unwittingly cast spells such as 
-     Tasha's Hideous Laughter, Fear, or Otto's Irresistable Dance on random targets in her vacinity. If she is directly attacked she will respond with the full force of her psychic magic. Unfortunately for her, because of 
+     Delores Dumas is always manic, disheveled and glassy-eye. Her red hair is always a mess and she is barely clothed, basically wearing a dirty gray long nightshirt. She always has her hands bound in manacles keep her from
+     that double any kind of magical travel, but also double as her spellcasting focus allowing her to cast spells without any other spell components. Delores is quite mad and barely coherent. In her more lucid moments she
+     tries to escape from her family, but is always brought back. At best, she speaks in riddles, at worst, in complete gibberish. Because of her broken mind, she cannot be charmed or contorlled in any way and is immune to
+     psychic damage. Delores isn't particularly aggressive, more just frantic. She will not attack anyone or anything unless she is directly attacked herself, but due to her mania, she will unwittingly cast spells such as
+     Tasha's Hideous Laughter, Fear, or Otto's Irresistable Dance on random targets in her vacinity. If she is directly attacked she will respond with the full force of her psychic magic. Unfortunately for her, because of
      her "special" relationship with the Dumas Family's Patron, none of her magic has any effect on her blood relatives. Everyone else, including non-blood related family, is fair game forher power.
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
 
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
